Fix end of week bar z-index

--- a/src/angular-planning/planning.scss
+++ b/src/angular-planning/planning.scss
@@ -160,7 +160,7 @@ $planning-end-of-week-bar-width: 4px;
         height: 100%;
         margin-left: $planning-cell-width - $planning-end-of-week-bar-width / 2;
         background-color: $planning-hover-color;
-        z-index: 10;
+        z-index: 1;
     }
 
     th.planning-today-cell {
